--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 </head>
 
 <body class="text-dark">
-    <header class="bg-white shadow-sm">
+       <header class="bg-white shadow-sm">
         <div style="background-color: #153C33;">
             <div class="container py-2">
                 <div class="d-flex justify-content-between align-items-center small text-white">
@@ -36,7 +36,7 @@
                             +91-9610164989
                         </span>
                     </div>
-                    <div class="d-flex gap-3">
+                    <div class="d-flex gap-1 gap-md-3">
                         <a href="https://www.instagram.com/mittalsphysiofit/" target="_blank" class="text-white">
                             <i class="fab fa-instagram fa-lg"></i>
                         </a>
@@ -49,8 +49,7 @@
                     </div>
                     <div>
                         <a href="https://classplusapp.com/w/mittalsmedicalclassesjigls" target="_blank"
-                            class="btn btn-danger d-inline-flex align-items-center shadow-sm rounded-pill"
-                            style="font-size:14px; padding: 3px 8px;">
+                            class="btn btn-danger d-inline-flex align-items-center shadow-sm rounded-pill live-btn">
                             <img src="/assets/image/live-class.gif" alt="Live" class="me-2"
                                 style="width:14px; height:14px; border-radius: 50%;">
                             Live Classes
@@ -60,7 +59,7 @@
             </div>
         </div>
         <div class="border-top">
-            <nav class="navbar navbar-expand-lg bg-white">
+            <nav class="navbar navbar-expand-lg bg-white py-0">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
                         <img alt="CB Physiotherapy Logo" src="./assets/image/Logo.webp" />
@@ -73,19 +72,17 @@
                         <ul class="navbar-nav">
                             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                             <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
-                            <!-- <li class="nav-item" onclick="scrollToSection('Services')"><a class="nav-link"
-                                    href="#">Services</a></li> -->
+
                             <li class="nav-item">
                                 <a class="nav-link" href="index.html#Services">Services</a>
                             </li>
                             <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 
-                            <!-- <li class="nav-item" onclick="scrollToSection('Contact-us')"><a class="nav-link"
-                                    href="#">Contact Us</a></li> -->
 
                             <li class="nav-item">
                                 <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
                             </li>
+
                             <li class="nav-item dropdown">
                                 <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                     href="" id="navbarDropdown" role="button">
@@ -95,7 +92,22 @@
                                     <li><a class="dropdown-item" target="_blank"
                                             href="https://drive.google.com/file/d/1bRkVtug0i-sa3-pBaxMUQ1kaseH0frIm/view">Back
                                             Exercises</a></li>
+                                    <li><a class="dropdown-item" target="_blank"
+                                            href="https://drive.google.com/file/d/1OPLa2aA34frS29iF_K0gipodr90QXBYB/view">Neck
+                                            and Knee
+                                        </a></li>
                                 </ul>
+                            </li>
+
+                            <li class="nav-item position-relative">
+                                <a class="nav-link" href="index.html#workshop">
+                                    Workshops
+                                </a>
+                                <!-- New badge above -->
+                                <span
+                                    class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
+                                    New
+                                </span>
                             </li>
                         </ul>
                     </div>
@@ -103,6 +115,7 @@
             </nav>
         </div>
     </header>
+
 
     <!-- Header -->
     <header class="bg-light py-5 text-center">
