--- a/gallery.html
+++ b/gallery.html
@@ -2,29 +2,62 @@
 <html lang="en">
 
 <head>
+    <!-- ✅ Basic Meta -->
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Image Gallery</title>
-
-    <!-- ✅ Website description -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mittal's Physiofit - Expert Physiotherapy in Jaipur</title>
     <meta name="description"
         content="Mittal's Physiofit offers expert physiotherapy services including advanced physiotherapy, sports rehab, neuro care, prenatal and postnatal rehabilitation, geriatric care, and more in Jaipur." />
+    <meta name="keywords"
+        content="physiotherapy in Jaipur, sports rehab, neuro care, prenatal physiotherapy, postnatal rehab, geriatric physiotherapy, Mittal's Physiofit" />
+    <meta name="author" content="Mittal's Physiofit" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/fevicon/favicon-16x16.png" />
-     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    <!-- ✅ Open Graph (Facebook, WhatsApp, LinkedIn) -->
+    <meta property="og:title" content="Mittal's Physiofit - Expert Physiotherapy in Jaipur" />
+    <meta property="og:description"
+        content="Get expert physiotherapy services including sports rehab, neuro care, prenatal & postnatal rehabilitation, geriatric care and more at Mittal's Physiofit, Jaipur." />
+    <meta property="og:image" content="https://mittalsphysiofit.com/fevicon/android-chrome-512x512.png" />
+    <meta property="og:url" content="https://mittalsphysiofit.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- ✅ Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Mittal's Physiofit - Expert Physiotherapy in Jaipur" />
+    <meta name="twitter:description"
+        content="Expert physiotherapy services in Jaipur including sports rehab, neuro care, prenatal/postnatal rehabilitation, and more." />
+    <meta name="twitter:image" content="https://mittalsphysiofit.com/fevicon/android-chrome-512x512.png" />
+
+    <!-- ✅ Favicons -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/fevicon/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/fevicon/favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="/fevicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/fevicon/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/fevicon/android-chrome-512x512.png" />
+    <link rel="shortcut icon" href="/fevicon/favicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="/fevicon/site.webmanifest" />
+
+    <!-- ✅ CSS Order -->
+    <!-- 1. Frameworks -->
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;display=swap"
-        rel="stylesheet" />
+
+    <!-- 2. Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
+
+    <!-- 3. Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
-    <link rel="stylesheet" href="style.css">
+    <!-- 4. Your Custom Styles -->
+    <link rel="stylesheet" href="/style.css" />
 
+    <!-- ✅ Preload for Faster Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 </head>
 
 <body class="bg-light">
-    <header class="bg-white shadow-sm">
+        <header class="bg-white shadow-sm">
         <div style="background-color: #153C33;">
             <div class="container py-2">
                 <div class="d-flex justify-content-between align-items-center small text-white">
@@ -36,7 +69,7 @@
                             +91-9610164989
                         </span>
                     </div>
-                    <div class="d-flex gap-3">
+                    <div class="d-flex gap-1 gap-md-3">
                         <a href="https://www.instagram.com/mittalsphysiofit/" target="_blank" class="text-white">
                             <i class="fab fa-instagram fa-lg"></i>
                         </a>
@@ -49,8 +82,7 @@
                     </div>
                     <div>
                         <a href="https://classplusapp.com/w/mittalsmedicalclassesjigls" target="_blank"
-                            class="btn btn-danger d-inline-flex align-items-center shadow-sm rounded-pill"
-                            style="font-size:14px; padding: 3px 8px;">
+                            class="btn btn-danger d-inline-flex align-items-center shadow-sm rounded-pill live-btn">
                             <img src="/assets/image/live-class.gif" alt="Live" class="me-2"
                                 style="width:14px; height:14px; border-radius: 50%;">
                             Live Classes
@@ -60,7 +92,7 @@
             </div>
         </div>
         <div class="border-top">
-            <nav class="navbar navbar-expand-lg bg-white">
+            <nav class="navbar navbar-expand-lg bg-white py-0">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
                         <img alt="CB Physiotherapy Logo" src="./assets/image/Logo.webp" />
@@ -73,18 +105,17 @@
                         <ul class="navbar-nav">
                             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                             <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
-                            <!-- <li class="nav-item" onclick="scrollToSection('Services')"><a class="nav-link"
-                                    href="#">Services</a></li> -->
+
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#Services">Services</a>
+                                <a class="nav-link" href="#Services">Services</a>
                             </li>
                             <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 
-                            <!-- <li class="nav-item" onclick="scrollToSection('Contact-us')"><a class="nav-link"
-                                    href="#">Contact Us</a></li> -->
-                                     <li class="nav-item">
-                                <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#Contact-us">Contact Us</a>
                             </li>
+
                             <li class="nav-item dropdown">
                                 <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                     href="" id="navbarDropdown" role="button">
@@ -94,7 +125,22 @@
                                     <li><a class="dropdown-item" target="_blank"
                                             href="https://drive.google.com/file/d/1bRkVtug0i-sa3-pBaxMUQ1kaseH0frIm/view">Back
                                             Exercises</a></li>
+                                    <li><a class="dropdown-item" target="_blank"
+                                            href="https://drive.google.com/file/d/1OPLa2aA34frS29iF_K0gipodr90QXBYB/view">Neck
+                                            and Knee
+                                        </a></li>
                                 </ul>
+                            </li>
+
+                            <li class="nav-item position-relative">
+                                <a class="nav-link" href="#workshop">
+                                    Workshops
+                                </a>
+                                <!-- New badge above -->
+                                <span
+                                    class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
+                                    New
+                                </span>
                             </li>
                         </ul>
                     </div>
@@ -102,6 +148,7 @@
             </nav>
         </div>
     </header>
+
     <main>
         <section class="bg-light py-5 position-relative">
             <div class="container px-4 text-center">
